<resources>
    <string name="app_name">הטרמפים שלי!</string>
    <string name="ride_from">מוצא</string>
    <string name="ride_to">יעד</string>
    <string name="send_to_all_btn">שליחת הודעה לכולם</string>
    <string name="current_ride_details">מ%1$s ל%2$s בשעה %3$s, %4$s</string>
    <string name="enter_nsg_here">נא הקלד את הודעתך כאן</string>
    <string name="send_msg">שליחה</string>
    <string name="cancel">ביטול</string>
    <string name="cant_send_empty_msg">לא ניתן לשלוח הודעה ריקה!</string>
    <string name="sent_successful">ההודעה נשלחה בהצלחה!</string>
    <string name="call">שיחה</string>
    <string name="private_msg">הודעה</string>
    <string name="ride_details">פרטי הנסיעה</string>
    <string name="rate">דירוג נסיעה</string>
    <string name="delete_passenger">מחק מהקבוצה</string>
    <string name="rating_sent">הדירוג נשלח בהצלחה!</string>
    <string name="very_bad_rating">גרוע</string>
    <string name="not_good_rating">לא טוב</string>
    <string name="quite_ok">בסדר</string>
    <string name="very_good">טוב מאוד</string>
    <string name="excellent">מצויין</string>
    <string name="rate_the_passenger_title">נא דרג את הנוסע</string>
    <string name="rate_passenger_description">בחר כמה כוכבים הייתם נותנים לנוסע בנסיעה הנוכחית</string>
    <string name="deleted_successfully">הנוסע נמחק בהצלחה!</string>
    <string name="add">הוספה</string>
    <string name="select_city_instructions">נא לבחור את עיר המוצא ועיר היעד</string>
    <string name="must_select_city">חובה לבחור עיר מהרשימה</string>
    <string name="select_ride_time">בחירת שעת יציאה</string>
    <string name="time_24_format">%1$02d:%2$02d</string>
    <string name="enter_phone">הקלד מספר טלפון</string>
    <string name="first_name">שם פרטי</string>
    <string name="add_passenger_instructions">הכנס את פרטי הנוסע</string>
    <string name="last_name">שם משפחה</string>
    <string name="city">עיר</string>
    <string name="street">רחוב</string>
    <string name="apt_num">מספר בית</string>
    <string name="finish">סיום</string>
    <string name="required_error_msg">שדה חובה</string>
    <string name="must_be_integer_error_msg">מספר שלם בלבד</string>
    <string name="ride_added_successfully">הנסיעה התווספה בהצלחה!</string>
    <string name="main_activity_description">בחרו את תאריך הנסיעה הרצוי</string>
    <string name="add_new_ride_button_description">הוספת נסיעה חדשה</string>
    <string name="passenger_added_successfully">הנוסע התווסף בהצלחה!</string>
    <string name="fields_not_empty_warning">חלק מהשדות לא ריקים, לצאת בכל מקרה?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
</resources>
