<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/add_passenger_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_passenger_instructions"
            android:textSize="20sp"
            android:textColor="@color/descriptionTextColor"
            android:gravity="center"
            android:padding="10dp"/>

        <AutoCompleteTextView
            android:id="@+id/auto_complete_tv_enter_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:completionThreshold="2"
            android:completionHint="@string/enter_phone"
            android:inputType="phone"
            android:gravity="center"
            android:padding="15dp"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/first_name"
            android:gravity="center"
            android:padding="15dp"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/last_name"
            android:gravity="center"
            android:padding="15dp"
            android:maxLength="20"/>

        <AutoCompleteTextView
            android:id="@+id/auto_complete_passenger_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/city"
            android:gravity="center"
            android:padding="15dp"
            android:completionThreshold="1"
            android:maxLength="20"/>

        <AutoCompleteTextView
            android:id="@+id/auto_complete_passenger_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/street"
            android:gravity="center"
            android:padding="15dp"
            android:completionThreshold="1"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/edit_text_apt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/apt_num"
            android:gravity="center"
            android:padding="15dp"
            android:maxLength="3"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:id="@+id/add_the_ride"
                android:layout_marginEnd="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:id="@+id/add_passenger"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>