<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration_scroll_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:id="@+id/select_city_instructions"
            android:text="@string/select_city_instructions"
            android:layout_margin="10dp"/>

        <AutoCompleteTextView
            android:completionThreshold="1"
            android:inputType="text"
            android:gravity="center"
            android:hint="@string/ride_from"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_text_from_city"
            android:layout_below="@+id/select_city_instructions"
            android:layout_margin="10dp"
            android:maxLength="20"/>

        <AutoCompleteTextView
            android:completionThreshold="1"
            android:inputType="text"
            android:hint="@string/ride_to"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_text_to_city"
            android:layout_below="@+id/edit_text_from_city"
            android:layout_margin="10dp"
            android:maxLength="20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_select_time"
            android:text="@string/select_ride_time"
            android:layout_below="@+id/edit_text_to_city"
            android:gravity="center"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/select_ride_time"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_select_time"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_add_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/add"
            android:layout_below="@+id/select_ride_time"/>
    </RelativeLayout>
</ScrollView>