<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/full_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/address"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/city"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/rating"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/call"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_private_msg"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/private_msg"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_rate"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/rate"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/delete_passenger"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>